; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/x86_64/extr_pmap.c_pt_fake_zone_info.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/x86_64/extr_pmap.c_pt_fake_zone_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@inuse_ptepages_count = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@vm_page_inactive_count = common dso_local global i32 0, align 4
@vm_page_active_count = common dso_local global i32 0, align 4
@vm_page_free_count = common dso_local global i32 0, align 4
@alloc_ptepages_count = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pt_fake_zone_info(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4, i32* %5, i32* %6, i32* %7, i32* %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32* %4, i32** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32* %6, i32** %16, align 8
  store i32* %7, i32** %17, align 8
  store i32* %8, i32** %18, align 8
  %19 = load i32, i32* @inuse_ptepages_count, align 4
  %20 = load i32*, i32** %10, align 8
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* @PAGE_SIZE, align 4
  %22 = load i32, i32* @inuse_ptepages_count, align 4
  %23 = mul nsw i32 %21, %22
  %24 = load i32*, i32** %11, align 8
  store i32 %23, i32* %24, align 4
  %25 = load i32, i32* @PAGE_SIZE, align 4
  %26 = load i32, i32* @inuse_ptepages_count, align 4
  %27 = load i32, i32* @vm_page_inactive_count, align 4
  %28 = add nsw i32 %26, %27
  %29 = load i32, i32* @vm_page_active_count, align 4
  %30 = add nsw i32 %28, %29
  %31 = load i32, i32* @vm_page_free_count, align 4
  %32 = add nsw i32 %30, %31
  %33 = mul nsw i32 %25, %32
  %34 = load i32*, i32** %12, align 8
  store i32 %33, i32* %34, align 4
  %35 = load i32, i32* @PAGE_SIZE, align 4
  %36 = load i32*, i32** %13, align 8
  store i32 %35, i32* %36, align 4
  %37 = load i32, i32* @PAGE_SIZE, align 4
  %38 = load i32*, i32** %14, align 8
  store i32 %37, i32* %38, align 4
  %39 = load i32, i32* @alloc_ptepages_count, align 4
  %40 = load i32, i32* @PAGE_SIZE, align 4
  %41 = mul nsw i32 %39, %40
  %42 = load i32*, i32** %15, align 8
  store i32 %41, i32* %42, align 4
  %43 = load i32*, i32** %16, align 8
  store i32 1, i32* %43, align 4
  %44 = load i32*, i32** %17, align 8
  store i32 0, i32* %44, align 4
  %45 = load i32*, i32** %18, align 8
  store i32 1, i32* %45, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
